--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint . --ext js,jsx",
     "format": "prettier --write .",
-    "prepare": "husky install"
+    "prepare": "if [ \"$VERCEL\" != \"1\" ]; then husky install; fi"
   },
   "dependencies": {
     "ant": "^0.0.0",
