--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext js,jsx",
-    "format": "prettier --write .",
-    "prepare": "node ./scripts/prepare-husky.js"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "ant": "^0.0.0",
@@ -28,7 +27,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.5.3",
     "vite": "^6.3.5"
